--- a/package.json
+++ b/package.json
@@ -2,15 +2,16 @@
   "name": "codeial",
   "version": "1.0.0",
   "description": "Issue Tracker",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "start":"node index.js",
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Manish Kumar Ravi",
   "license": "ISC",
   "dependencies": {
     "body": "^5.1.0",
+    "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
